Fixed excessive gap below page content on all pages

--- a/sooslwww/static/css/sil_org.css
+++ b/sooslwww/static/css/sil_org.css
@@ -120,7 +120,6 @@ min-width: 716px;
 #left {
     width: 134px;
     float: left;
-    margin-bottom: 100%;
 }
 
 
